--- a/src/sdi-project3.html
+++ b/src/sdi-project3.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Paul J. Miller :: Project 3 :: SDI 1206</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
-    <h2>Project 2</h2>
+    <h1>SDI 1206: Paul J. Miller</h1>
+    <h2>Project 3</h2>
 </header>
 <article>
 <p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
@@ -17,6 +17,7 @@
 <footer>
     <p>COMPLETION DATE, FULL NAME</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="json.js"></script>
+<script type="text/javascript" src="miller_paul_assignment3.js"></script>
 </body>
 </html>
