--- a/src/sdi-project4.html
+++ b/src/sdi-project4.html
@@ -13,7 +13,7 @@
 <p>Custom Library</p>
 </article>
 <footer>
-    <p>06/22/2012 Paul J. Miller</p>
+    <p>06/22/2012 Micheal S. Miller</p>
 </footer>
 <script type="text/javascript" src="miller_paul_assignment4.js"></script>
 </body>
